11-kubernetes/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wcg
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wcg
  template:
    metadata:
      labels:
        app: wcg

      containers:
        - name: wcg
          image: ghcr.io/stanisz1/wcg
          imagePullPolicy: Always
          resources: {}
