11-kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wcg-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: wcg.com
    http:
      paths:
      - path: /svc1
        pathType: Prefix
        backend:
          service:
            name: wcg
            port:
              number: 8888
